2003-04-28  Andrew Choi  <akochoi@shaw.ca>

	* make-package: Allocate 5% extra space on disk image for
	directories and partition tables.

2003-04-04  Steven Tamm  <steventamm@mac.com>

	* make-package: Place libexec executables directly under the
	Contents/MacOS/libexec if the application is self-contained

2003-04-01  Kim F. Storm  <storm@cua.dk>

	* makefile.MPW (frame.c.x): Add dependency on BLOCKINPUT_H_GROUP.
	(xdisp.c.x): Fix to use BLOCKINPUT_H_GROUP.

2003-03-21  Kim F. Storm  <storm@cua.dk>

	* makefile.MPW (xdisp.c.x):  Add dependency on blockinput.h and
	files included from it.  Add dependency on keymap.h.

2003-01-14  Steven Tamm  <steventamm@mac.com>

	* make-package: Fixed problem where the building without
	specifying build directory fails.

2003-01-07  Steven Tamm  <steventamm@mac.com>

	* INSTALL: Added documentation about --enable-carbon-app and
	changed documentation concerning Emacs.app location
	Removed some of the documentation about make-package that isn't
	needed
	Changed comment about requiring root permission to install to
	saying that it might be necessary depending on where you install
	Refered to /usr caveat in more places
	* make-package (make_options): Use new carbon_appdir option to
	specify directory to install Application and lets the makefile
	install

2003-01-01  Steven Tamm  <steventamm@mac.com>

	* make-package: Now copies License and ReadMe files into the
	Resources directory.  Reduces overhead size when creating
	installer disk image.

2002-12-29  Steven Tamm  <steventamm@mac.com>

	* make-package: Defaults to building the source tree in a
	separate directory.  Use the new option --build-in-place to
	have old behavior.  Added new option --build-dir to specify the
	build directory.

2002-12-27  Steven Tamm  <steventamm@mac.com>

	* make-package: Fix typo where tmpparent was used instead of
	tempparent for calculating installedSize and compressedSize.

2002-12-10  Andreas Schwab  <schwab@suse.de>
