@@ -1,3 +1,9 @@
+2003-10-31  Andrew Choi  <akochoi@shaw.ca>
+
+	* INSTALL: Add Nozomu Ando's changes to instructions for
+	installing on X Window (that static libraries are no longer
+	necessary after his changes to src/unexmacosx.c).
+
 2003-04-28  Andrew Choi  <akochoi@shaw.ca>
 
 	* make-package: Allocate 5% extra space on disk image for
